<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/main_view_title" />

    <Button
        android:id="@+id/btDairy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_view_btn_dairy" />

    <Button
        android:id="@+id/btRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_view_btn_recipe" />

</LinearLayout>